# MindWise-Backend

backend/: .gitignore  ARCHITECTURE.md  README.md  backup_codes.py  database.py  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/core/: auth.py  config.py
backend/models/: interview.py  job.py  note.py  resume.py  user.py  user_profile.py
backend/routers/: ai.py  analytics.py  auth.py  interviews.py  jobs.py  notes.py  profile.py  rejection_area.py  resume.py
backend/schemas/: interview.py  job.py  note.py  profile.py  resume.py  user.py
backend/services/: ai_agent.py  interview_service.py  job_extractor.py  pdf_service.py  profile_service.py  resume_extractor.py  resume_service.py
